Mobile modal + bug fix
Fixed bug where back/exit modals too wide and where back/exit modals would not be hidden

--- a/accounts/static/accounts/css/onboarding_movies.css
+++ b/accounts/static/accounts/css/onboarding_movies.css
@@ -111,6 +111,14 @@
     background-color: #9a8aff;
     transform: scale(1) !important;
   }
+
+}
+
+@media screen and (max-width: 500px) {
+  #help_modal{
+    width:100% !important; /*TODO: overrides separate !important width in modal.css  */
+    padding: 20px 0px;
+  }
 }
 
 #help_button {
@@ -126,7 +134,7 @@
 #top_header{
   text-align: center;
 }
-.modal{
+#help_modal{
   width:75%;
   max-width: 1080px;
 }
